--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@esbuild/darwin-x64": "^0.19.5",
     "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@supabase/supabase-js": "^2.38.4",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
